test/expected/declare_etmf.out
declare f as extern member function
        ^
9: error: member functions can not be "extern"
